# embedded-system-monitoring

./: CMakeLists.txt  Makefile  main  main.c  systemManager.h
inc/: CPUInfo.h  processInfo.h  storageInfo.h  systemManager.h
inc/cpuManager/: CPUInfo.h  cpuInfo.h  cpuManager.h
inc/manager/: cpuManager.h
inc/memoryManager/: memoryInfo.h  memoryManager.h
inc/monitorManager/: monitorManager.h
inc/networkManager/: networkInfo.h  networkManager.h
inc/parameters/: CPUInfo.h  networkInfo.h
inc/storageManager/: storageInfo.h  storageManager.h  storagePartition.h
inc/subManager/: cpuManager.h
inc/sysMetricManager/: systemInfo.h
inc/systemManager/: systemInfo.h  systemManager.h
src/: CPUInfo.c  cpuManager.c  memoryInfo.c  networkInfo.c  processInfo.c  storageInfo.c  storagePartition.c  systemInfo.c  systemManager.c
src/cpuManager/: cpuInfo.c  cpuManager.c
src/memoryManager/: memoryInfo.c  memoryManager.c
src/monitorManager/: monitorManager.c
src/networkManager/: networkInfo.c  networkManager.c
src/storageManager/: storageInfo.c  storageManager.c
src/systemManager/: systemInfo.c  systemManager.c
